o fixed ClientAbortException o aligned suggest boxes to textfields o moved window.size function to utils module
git-svn-id: https://j-wings.svn.sourceforge.net/svnroot/j-wings/wings3/trunk@4194 c8af5dc8-8010-0410-93ac-e0f74e17e1d8

--- a/wings/src/res/org/wings/plaf/css/all.css
+++ b/wings/src/res/org/wings/plaf/css/all.css
@@ -867,6 +867,13 @@ table.DivisionContent {
 	right:0px !important;
 }
 
+/* --- XSUGGEST -------------------------------------------------- */
+
+.yui-ac-content
+{
+    margin-top:-1px;
+}
+
 /* --- ZOOMABLE IMAGE -------------------------------------------- */
 
 .XZoomableImage {
