--- a/wings/src/res/org/wings/plaf/css/msie.css
+++ b/wings/src/res/org/wings/plaf/css/msie.css
@@ -187,6 +187,13 @@ TABLE.formbutton_hover {
 	right:0px !important;
 }
 
+/* --- XSUGGEST -------------------------------------------------- */
+
+.yui-ac-content
+{
+    margin-top:-2px;
+}
+
 /* --- ZOOMABLE IMAGE -------------------------------------------- */
 
 .XZoomableImage {
